# llll

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/llll/: __init__.py  cli.py  config.py  discover.py  firmware.py  logs.py  runner.py  server.py
