[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llll-mcp"
version = "0.1.1"
description = "LEGO LIN LA LOOP (llll) is an agentic development loop for LEGO Mindstorms via Pybricks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Matt Prindible", email = "code@mattprindible.com"}
]
keywords = ["lego", "mindstorms", "pybricks", "mcp", "robotics", "ai", "agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: System :: Hardware",
]
dependencies = [
    "pybricksdev>=2.3.2",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/mattprindible/llll"
Repository = "https://github.com/mattprindible/llll"
Issues = "https://github.com/mattprindible/llll/issues"

[project.scripts]
llll = "llll.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llll"]

[tool.hatch.build.targets.wheel.sources]
src = ""
